feat: 重构用户管理和权限系统
- 合并用户管理页面，统一功能到 `/Home/user`
- 强制新注册用户分配默认角色
- 修复权限分配兼容性问题
- 优化后端API权限校验逻辑
- 更新测试配置和数据库迁移脚本
- 移除冗余的Admin相关代码
- 添加Docker支持